parser/tests/snapshots/for_loops__for_loop.snap
---
source: parser/tests/for_loops.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            ForStatement(
                ForStatement {
                    node: Node {
                        start: 0,
                        end: 30,
                    },
                    init: Some(
                        VariableDeclaration(
                            VariableDeclaration {
                                node: Node {
                                    start: 4,
                                    end: 13,
                                },
                                declarations: [
                                    VariableDeclarator {
                                        node: Node {
                                            start: 8,
                                            end: 13,
                                        },
                                        id: Identifier(
                                            Identifier {
                                                node: Node {
                                                    start: 8,
                                                    end: 9,
                                                },
                                                name: Atom('i' type=inline),
                                            },
                                        ),
                                        type_annotation: None,
                                        init: Some(
                                            Literal(
                                                Literal {
                                                    node: Node {
                                                        start: 12,
                                                        end: 13,
                                                    },
                                                    value: Number(
                                                        0.0,
                                                    ),
                                                },
                                            ),
                                        ),
                                    },
                                ],
                                kind: Let,
                            },
                        ),
                    ),
                    test: Some(
                        BinaryExpression(
                            BinaryExpression {
                                node: Node {
                                    start: 15,
                                    end: 21,
                                },
                                operator: LessThan,
                                left: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 15,
                                            end: 16,
                                        },
                                        name: Atom('i' type=inline),
                                    },
                                ),
                                right: Literal(
                                    Literal {
                                        node: Node {
                                            start: 19,
                                            end: 21,
                                        },
                                        value: Number(
                                            10.0,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                    update: Some(
                        UpdateExpression(
                            UpdateExpression {
                                node: Node {
                                    start: 23,
                                    end: 26,
                                },
                                operator: Increment,
                                argument: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 23,
                                            end: 24,
                                        },
                                        name: Atom('i' type=inline),
                                    },
                                ),
                                prefix: false,
                            },
                        ),
                    ),
                    body: BlockStatement(
                        BlockStatement {
                            node: Node {
                                start: 28,
                                end: 30,
                            },
                            body: [],
                        },
                    ),
                },
            ),
        ),
    ],
}
