parser/tests/snapshots/for_loops__for_loop_without_initializer.snap
---
source: parser/tests/for_loops.rs
expression: "format!(\"{:#?}\", program)"
---
Program {
    source_type: Script,
    body: [
        Statement(
            ForStatement(
                ForStatement {
                    node: Node {
                        start: 0,
                        end: 21,
                    },
                    init: None,
                    test: Some(
                        BinaryExpression(
                            BinaryExpression {
                                node: Node {
                                    start: 6,
                                    end: 12,
                                },
                                operator: LessThan,
                                left: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 6,
                                            end: 7,
                                        },
                                        name: Atom('i' type=inline),
                                    },
                                ),
                                right: Literal(
                                    Literal {
                                        node: Node {
                                            start: 10,
                                            end: 12,
                                        },
                                        value: Number(
                                            10.0,
                                        ),
                                    },
                                ),
                            },
                        ),
                    ),
                    update: Some(
                        UpdateExpression(
                            UpdateExpression {
                                node: Node {
                                    start: 14,
                                    end: 17,
                                },
                                operator: Increment,
                                argument: Identifier(
                                    Identifier {
                                        node: Node {
                                            start: 14,
                                            end: 15,
                                        },
                                        name: Atom('i' type=inline),
                                    },
                                ),
                                prefix: false,
                            },
                        ),
                    ),
                    body: BlockStatement(
                        BlockStatement {
                            node: Node {
                                start: 19,
                                end: 21,
                            },
                            body: [],
                        },
                    ),
                },
            ),
        ),
    ],
}
